# ACP_MCP_ProjectUD

1crewAiInsuranceAgent_with_ACP/: acpclient.py  main.py  pyproject.toml
1crewAiWithACP_MCP/: acpclient.py  crew_agent_server.py
2sequentialAgent_health_insurer_acp/: README.md  acpclient_agent.py  agent.py  crewAiInsurerservice.py  langgraph_hospital_server.py  main.py  pyproject.toml  smolagenthospital.py  test_langgraph_client.py
3HierarchialChaining_Agent/: TEMPagent copy.py  agent.py  crew_agent_server.py  fastacp.py  pyproject.toml  smolagents_server.py
3Hierarchially_chaining_agent/: agent.py  crewaiInsurance_agent.py  fastacp.py  main.py  pyproject.toml  smol_health_agent.py
4Acp_with_MCP_Project/: main.py  mcpserver.py  pyproject.toml
4acp_MCP_Project/: agent.py  mcpserver.py  pyproject.toml  smolagents_server.py
input/: README.md
input/2t/: smolagents_server.py
input/3t/: agent.py
input/4t/: agent.py  pyproject.toml
temp/: README.md
temp/2multiagent_SequentialWithACP/: agent.py  pyproject.toml  smolagents_server.py
temp/3multiagent_Langchain_WithACP/: fastacp.py
temp/4multiAgentHierarchialwithACP_MCP/: mcpserver.py
