[project]
name = "2multiagentwithacp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "acp-sdk>=1.0.0",
    "colorama>=0.4.6",
    "crewai>=0.150.0",
    "langchain>=0.3.26",
    "langgraph>=0.5.4",
    "mcp>=1.12.1",
    "smolagents[mcp]>=1.20.0",
]
