[project]
name = "2multiagent-sequentialwithacp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "acp-sdk>=1.0.0",
    "colorama>=0.4.6",
    "crewai>=0.150.0",
    "crewai-tools>=0.58.0",
    "duckduckgo-search>=8.1.1",
    "langchain>=0.3.27",
    "langgraph>=0.5.4",
    "mcp>=1.12.1",
    "nest-asyncio>=1.6.0",
    "smolagents[mcp]>=1.20.0",
]
